# libqatemcontrol

./: CMakeLists.txt  UNIMPLEMENTED.md  config.cmake.in  libqatemcontrol.pro  qatemconnection.cpp  qatemconnection.h  qatemdownstreamkey.cpp  qatemdownstreamkey.h  qatemfairlight.cpp  qatemfairlight.h  qatemmixeffect.cpp  qatemmixeffect.h  qatemrecording.cpp  qatemrecording.h  qatemstreaming.cpp  qatemstreaming.h  qatemsubsystembase.cpp  qatemsubsystembase.h  qatemsupersource.cpp  qatemsupersource.h  qatemsupersourcebox.cpp  qatemsupersourcebox.h  qatemtypes.h
example/: CMakeLists.txt
example/qatemswitcher/: CMakeLists.txt
example/qatemuploader/: CMakeLists.txt  qatemuploader.cpp
